Source/WebCore/css/parser/CSSParserToken.cpp
@@ -1,5 +1,5 @@
 // Copyright 2014 The Chromium Authors. All rights reserved.
-// Copyright (C) 2016 Apple Inc. All rights reserved.
+// Copyright (C) 2016-2021 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions are
@@ -238,24 +238,15 @@ CSSParserToken::CSSParserToken(CSSParserTokenType type, StringView value, BlockT
     m_id = -1;
 }
 
-CSSParserToken::CSSParserToken(CSSParserTokenType type, double numericValue, NumericValueType numericValueType, NumericSign sign)
-    : m_type(type)
+CSSParserToken::CSSParserToken(double numericValue, NumericValueType numericValueType, NumericSign sign, StringView originalText)
+    : m_type(NumberToken)
     , m_blockType(NotBlock)
     , m_numericValueType(numericValueType)
     , m_numericSign(sign)
     , m_unit(static_cast<unsigned>(CSSUnitType::CSS_NUMBER))
+    , m_numericValue(numericValue)
 {
-    ASSERT(type == NumberToken);
-    m_numericValue = numericValue;
-}
-
-CSSParserToken::CSSParserToken(CSSParserTokenType type, UChar32 start, UChar32 end)
-    : m_type(UnicodeRangeToken)
-    , m_blockType(NotBlock)
-{
-    ASSERT_UNUSED(type, type == UnicodeRangeToken);
-    m_unicodeRange.start = start;
-    m_unicodeRange.end = end;
+    initValueFromStringView(originalText);
 }
 
 CSSParserToken::CSSParserToken(HashTokenType type, StringView value)
@@ -266,12 +257,34 @@ CSSParserToken::CSSParserToken(HashTokenType type, StringView value)
     initValueFromStringView(value);
 }
 
+static StringView mergeIfAdjacent(StringView a, StringView b)
+{
+    if (a.is8Bit() && b.is8Bit()) {
+        auto characters = a.characters8();
+        if (characters + a.length() == b.characters8())
+            return { characters, a.length() + b.length() };
+    } else if (!a.is8Bit() && !b.is8Bit()) {
+        auto characters = a.characters16();
+        if (characters + a.length() == b.characters16())
+            return { characters, a.length() + b.length() };
+    }
+    return { };
+}
+
 void CSSParserToken::convertToDimensionWithUnit(StringView unit)
 {
     ASSERT(m_type == NumberToken);
+    auto originalNumberText = originalText();
+    auto originalNumberTextLength = originalNumberText.length();
+    auto string = unit;
+    if (originalNumberTextLength && originalNumberTextLength < 16) {
+        if (auto merged = mergeIfAdjacent(originalNumberText, unit))
+            string = merged;
+    }
     m_type = DimensionToken;
-    initValueFromStringView(unit);
     m_unit = static_cast<unsigned>(stringToUnitType(unit));
+    m_nonUnitPrefixLength = string == unit ? 0 : originalNumberTextLength;
+    initValueFromStringView(string);
 }
 
 void CSSParserToken::convertToPercentage()
@@ -279,6 +292,18 @@ void CSSParserToken::convertToPercentage()
     ASSERT(m_type == NumberToken);
     m_type = PercentageToken;
     m_unit = static_cast<unsigned>(CSSUnitType::CSS_PERCENTAGE);
+}
+
+StringView CSSParserToken::originalText() const
+{
+    ASSERT(m_type == NumberToken || m_type == DimensionToken);
+    return value();
+}
+
+StringView CSSParserToken::unitString() const
+{
+    ASSERT(m_type == DimensionToken);
+    return value().substring(m_nonUnitPrefixLength);
 }
 
 UChar CSSParserToken::delimiter() const
@@ -333,35 +358,52 @@ CSSValueID CSSParserToken::functionId() const
 
 bool CSSParserToken::hasStringBacking() const
 {
-    CSSParserTokenType tokenType = type();
-    return tokenType == IdentToken
-        || tokenType == FunctionToken
-        || tokenType == AtKeywordToken
-        || tokenType == HashToken
-        || tokenType == UrlToken
-        || tokenType == DimensionToken
-        || tokenType == StringToken;
+    switch (type()) {
+    case AtKeywordToken:
+    case DimensionToken:
+    case FunctionToken:
+    case HashToken:
+    case IdentToken:
+    case NumberToken:
+    case PercentageToken:
+    case StringToken:
+    case UrlToken:
+        return true;
+    case BadStringToken:
+    case BadUrlToken:
+    case CDCToken:
+    case CDOToken:
+    case ColonToken:
+    case ColumnToken:
+    case CommaToken:
+    case CommentToken:
+    case DashMatchToken:
+    case DelimiterToken:
+    case EOFToken:
+    case IncludeMatchToken:
+    case LeftBraceToken:
+    case LeftBracketToken:
+    case LeftParenthesisToken:
+    case PrefixMatchToken:
+    case RightBraceToken:
+    case RightBracketToken:
+    case RightParenthesisToken:
+    case SemicolonToken:
+    case SubstringMatchToken:
+    case SuffixMatchToken:
+    case WhitespaceToken:
+        return false;
+    }
+    ASSERT_NOT_REACHED();
+    return false;
 }
 
-CSSParserToken CSSParserToken::copyWithUpdatedString(const StringView& string) const
+CSSParserToken CSSParserToken::copyWithUpdatedString(StringView string) const
 {
+    ASSERT(value() == string);
     CSSParserToken copy(*this);
     copy.initValueFromStringView(string);
     return copy;
-}
-
-bool CSSParserToken::valueDataCharRawEqual(const CSSParserToken& other) const
-{
-    if (m_valueLength != other.m_valueLength)
-        return false;
-
-    if (m_valueDataCharRaw == other.m_valueDataCharRaw && m_valueIs8Bit == other.m_valueIs8Bit)
-        return true;
-
-    if (m_valueIs8Bit)
-        return other.m_valueIs8Bit ? equal(static_cast<const LChar*>(m_valueDataCharRaw), static_cast<const LChar*>(other.m_valueDataCharRaw), m_valueLength) : equal(static_cast<const LChar*>(m_valueDataCharRaw), static_cast<const UChar*>(other.m_valueDataCharRaw), m_valueLength);
-    
-    return other.m_valueIs8Bit ? equal(static_cast<const UChar*>(m_valueDataCharRaw), static_cast<const LChar*>(other.m_valueDataCharRaw), m_valueLength) : equal(static_cast<const UChar*>(m_valueDataCharRaw), static_cast<const UChar*>(other.m_valueDataCharRaw), m_valueLength);
 }
 
 bool CSSParserToken::operator==(const CSSParserToken& other) const
@@ -379,16 +421,14 @@ bool CSSParserToken::operator==(const CSSParserToken& other) const
     case FunctionToken:
     case StringToken:
     case UrlToken:
-        return valueDataCharRawEqual(other);
+        return value() == other.value();
     case DimensionToken:
-        if (!valueDataCharRawEqual(other))
+        if (unitString() != other.unitString())
             return false;
         FALLTHROUGH;
     case NumberToken:
     case PercentageToken:
         return m_numericSign == other.m_numericSign && m_numericValue == other.m_numericValue && m_numericValueType == other.m_numericValueType;
-    case UnicodeRangeToken:
-        return m_unicodeRange.start == other.m_unicodeRange.start && m_unicodeRange.end == other.m_unicodeRange.end;
     default:
         return true;
     }
@@ -496,11 +536,8 @@ void CSSParserToken::serialize(StringBuilder& builder, const CSSParserToken* nex
     case DimensionToken:
         // This will incorrectly serialize e.g. 4e3e2 as 4000e2.
         builder.append(numericValue());
-        serializeIdentifier(value().toString(), builder);
+        serializeIdentifier(unitString().toString(), builder);
         appendCommentIfNeeded({ IdentToken, FunctionToken, UrlToken, BadUrlToken, NumberToken, PercentageToken, DimensionToken, CDCToken }, '-');
-        break;
-    case UnicodeRangeToken:
-        builder.append("U+", hex(unicodeRangeStart()), '-', hex(unicodeRangeEnd()));
         break;
     case StringToken:
         serializeString(value().toString(), builder);
